@@ -30,23 +30,31 @@ module Fairy
     end
 
     def appear_njob
-      @nodes_mutex.synchronize do
-	while @nodes_for_next_filters.empty?
-	  @nodes_cv.wait(@nodes_mutex)
-	end
-	njob = @nodes_for_next_filters.shift
-	unless njob
-	  @exports.push nil
-	  return
-	end
+Log::debug(self, "APPEAR_NJOB:S")
+      loop do
+	@nodes_mutex.synchronize do
+	  while @nodes_for_next_filters.empty?
+	    @nodes_cv.wait(@nodes_mutex)
+	  end
+Log::debug(self, "APPEAR_NJOB:1")
+	  njob = @nodes_for_next_filters.shift
+Log::debug(self, "APPEAR_NJOB:2")
+	  unless njob
+Log::debug(self, "APPEAR_NJOB:E")
+	    @exports_queue.push nil
+	    return
+	  end
 
-	njob.exports.each do |exp|
-	  exp.no = @no_of_exports
-#	  exp.key = njob.key
-	  @no_of_exports += 1
+Log::debug(self, "APPEAR_NJOB:3")
+	  njob.exports.each do |exp|
+	    exp.no = @no_of_exports
+	    #	  exp.key = njob.key
+	    @no_of_exports += 1
 
-	  @export2njob[exp] = njob
-	  @exports_queue.push exp
+	    @export2njob[exp] = njob
+	    @exports_queue.push exp
+	  end
+Log::debug(self, "APPEAR_NJOB:4")
 	end
       end
     end
@@ -56,7 +64,11 @@ module Fairy
     end
 
     def start_export(exp)
+Log::debug(self, "START_EXPORT:SS")
+
+Log::debug(self, "START_EXPORT: #{exp.class} #{@export2njob[exp].class}")
       @export2njob[exp].start_export
+Log::debug(self, "START_EXPORT:EE")
       exp
     end
       
